0.9.0.4:

  Turtle/N3 output: improved string formatting (better handling of
  string literals with three or more consecutive " characters); blank
  node handling has been improved but the output may not be as elegant.

  NTriples parser: now accepts upper-case language tags such as
  en-UK (case is preserved).

  Added tests for the Turtle parser.

0.9.0.3:

  Fix minor Haddock issue with Swish.RDF.Parser.Utils.appendURIs.

0.9.0.2:

  Updated the upper bound on the polyparse dependency.

0.9.0.1:

  Updated the upper bound on the semigroup dependency (thanks to Leif
  Warner).

0.9.0.0:

  The module now builds against version 1.2 or 1.1 of the hashable
  package; as there have been significant changes to hashable in the
  1.2 release I have decided to bump up the version number to 0.9
  as a precaution.

  Fix failing test on 64-bit GHC (no library change).

  Very minor hlint changes.

0.8.0.3:

  Remove hashtable restriction (rewrite tests), remove binary constraint
  as it was apparently unneeded.

  Updates to support network version 2.4.0.0: the package now provides
  an Ord instance for Network.URI so Network.URI.Ord is now a no-op if
  network >= 2.4.0.0 is installed; fix up code to handle change to
  the API of relativeTo.

0.8.0.2:

  Restrict hashable to < 1.1.2.4 to try and avoid test
  failures - see
  http://travis-ci.org/#!/DougBurke/swish/builds/2360859
  This is a hack and the tests should be updated.

  Updated directory constraint to allow 1.2 on ghc 7.6.

0.8.0.1:

  Internal changes to Turtle/N3 formatting. No user-visible changes.

0.8.0.0:

  The LDGraph class now uses Set (Arc lb), rather than [Arc lb], for
  setArcs, getArcs, and update. Several data types - e.g. NSGraph -
  now use sets rather than lists. There are a number of API tweaks -
  e.g. the addition of Ord constraints and the removal of Functor,
  Foldable, and Traversable instances. Not all list of Arcs have been